fix home page mobile title clipping

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -39,7 +39,8 @@
     font-weight: 300;
     height: 120px;
     line-height: 125px;
-    margin: 0 0 0 45px;
+    margin: 0;
+    padding-left: 45px;
     width: 200px;
     z-index: 1;
   }
